Mapprio/main/default/objects/MapprioResponseSession__c/MapprioResponseSession__c.object-meta.xml
<CustomObject>
    <label>Mapprio Response Session</label>
    <nameField>
        <label>Mapprio Response Session ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapprio Response Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>