Mapprio/main/default/objects/MapprioResponseSession__c/fields/CompletionDateTime__c.field-meta.xml
<CustomField>
    <fullName>CompletionDateTime__c</fullName>
    <label>Completion Time</label>
    <type>DateTime</type>
</CustomField>