Mapprio/main/default/objects/MapprioResponseSession__c/fields/MapprioSmartSurveyTarget__c.field-meta.xml
<CustomField>
    <fullName>MapprioSmartSurveyTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapprio Smart Survey Target</label>
    <referenceTo>MapprioSmartSurveyTarget__c</referenceTo>
    <relationshipLabel>Mapprio Response Sessions</relationshipLabel>
    <relationshipName>MapprioResponseSessions</relationshipName>
    <type>Lookup</type>
</CustomField>