Mapprio/main/default/objects/MapprioResponseSession__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>